# novelist

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  lsan_suppression.txt
core/: CMakeLists.txt
core/designer/: CMakeLists.txt  FilePickerPlugin.cpp  FilePickerPlugin.h  InsightViewPlugin.cpp  InsightViewPlugin.h  LanguagePickerPlugin.cpp  LanguagePickerPlugin.h  ProjectViewPlugin.cpp  ProjectViewPlugin.h  SceneTabWidgetPlugin.cpp  SceneTabWidgetPlugin.h  main.cpp  main.h
core/include/novelist/datastructures/: SceneDocument.h  SortedVector.h  Tree.h
core/include/novelist/document/: AutoInsight.h  BaseInsight.h  GrammarInsight.h  Insight.h  InsightFactory.h  NoteInsight.h  SceneDocument.h  SceneDocumentInsightManager.h  SpellingInsight.h  TextFormatManager.h  TextMarker.h  TypographyInsight.h
core/include/novelist/editor/: EditorActions.h  TextEditor.h  TextEditorLineNumbersSideBar.h  TextEditorSideBar.h  TextEditorToolBar.h
core/include/novelist/functional/: Overloaded.h
core/include/novelist/identity/: Identity.h
core/include/novelist/inspection/: IInsight.h  InsightModel.h  TextAnnotation.h
core/include/novelist/lang/: Language.h
core/include/novelist/model/: Language.h  ModelPath.h  ProjectModel.h
core/include/novelist/plugin/: BasePlugin.h  ExporterPlugin.h  IPlugin.h  InspectionPlugin.h  Plugin.h  PluginInfo.h  PluginManager.h
core/include/novelist/settings/: Settings.h  SettingsPage.h  SettingsPage_Editor.h  SettingsPage_General.h
core/include/novelist/test/: TestApplication.h  catch_string_conversions.h
core/include/novelist/util/: Compare.h  Connection.h  ConnectionWrapper.h  CrcHash.h  DelegateAction.h  FlagSet.h  Identity.h  Logging.h  MenuHelper.h  Overloaded.h  StrongTypedef.h  TranslationManager.h
core/include/novelist/view/: InsightView.h  ProjectView.h
core/include/novelist/widgets/: FilePicker.h  LanguagePicker.h  SceneTabWidget.h  TextEditor.h
core/include/novelist/windows/: MainWindow.h  NoteEditWindow.h  ProjectPropertiesWindow.h  SettingsWindow.h  TextFormatDialog.h
core/resources/: resources.qrc
core/resources/icons/ps/: bold.psd  book.psd  chain-broken.psd  chain-linked.psd  chapter.psd  format-character.psd  format-custom-feather.psd  format-custom-letters.psd  format-custom-speechbubble.psd  format-custom-thoughtbubble.psd  format-paragraph.psd  italic.psd  notebook.psd  overline.psd  scene.psd  smallcaps.psd  strikethrough.psd  underline.psd
core/resources/icons/tango/: index.theme  tango.qrc
core/src/novelist/datastructures/: SceneDocument.cpp
core/src/novelist/document/: AutoInsight.cpp  BaseInsight.cpp  GrammarInsight.cpp  Insight.cpp  NoteInsight.cpp  SceneDocument.cpp  SceneDocumentInsightManager.cpp  SpellingInsight.cpp  TextFormatManager.cpp  TextMarker.cpp  TypographyInsight.cpp
core/src/novelist/editor/: TextEditor.cpp  TextEditorLineNumbersSideBar.cpp  TextEditorParagraphNumbersSideBar.cpp  TextEditorSideBar.cpp  TextEditorToolBar.cpp
core/src/novelist/inspection/: InsightModel.cpp  TextAnnotation.cpp
core/src/novelist/lang/: Language.cpp
core/src/novelist/model/: Language.cpp  ModelPath.cpp  ProjectModel.cpp
core/src/novelist/plugin/: BasePlugin.cpp  ExporterPlugin.cpp  InspectionPlugin.cpp  PluginManager.cpp
core/src/novelist/settings/: Settings.cpp  SettingsPage_Editor.cpp  SettingsPage_Editor.ui  SettingsPage_General.cpp  SettingsPage_General.ui
core/src/novelist/test/: TestApplication.cpp
core/src/novelist/util/: Connection.cpp  ConnectionWrapper.cpp  DelegateAction.cpp  MenuHelper.cpp  TranslationManager.cpp
core/src/novelist/view/: InsightView.cpp  ProjectView.cpp
core/src/novelist/widgets/: FilePicker.cpp  LanguagePicker.cpp  SceneTabWidget.cpp  TextEditor.cpp
core/src/novelist/windows/: MainWindow.cpp  MainWindow.ui  NoteEditWindow.cpp  NoteEditWindow.ui  ProjectPropertiesWindow.cpp  ProjectPropertiesWindow.ui  SettingsWindow.cpp  SettingsWindow.ui  TextFormatDialog.cpp  TextFormatDialog.ui
core/test/: CMakeLists.txt  macros.h  main.cpp  main.h
core/test/datastructures/: SceneDocumentTest.cpp  SortedVectorTest.cpp  TreeTest.cpp
core/test/document/: SceneDocumentTest.cpp  TextMarkerTest.cpp
core/test/editor/document/: DocumentTest.cpp  TextCursorHelperTest.cpp
core/test/identity/: IdentityTest.cpp
core/test/lang/: LanguageTests.cpp
core/test/model/: ProjectModelTest.cpp  ProjectModelTests.cpp
core/test/util/: CompareTest.cpp  CrcHashTest.cpp  FlagSetTest.cpp  IdentityTest.cpp  LoggingTest.cpp  StrongTypedefTest.cpp
core/test/view/: ProjectViewTest.cpp
core/test/widgets/: TextEditorTest.cpp
core/translations/: novelist_core_de.ts  novelist_core_en.ts
launcher/: CMakeLists.txt
launcher/src/novelist/: main.cpp
lib/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/export_odt/: CMakeLists.txt
plugins/export_odt/include/novelist/: ExportOdtPlugin.h  ExportOdtPlugin.json
plugins/export_odt/src/novelist/: ExportOdtPlugin.cpp
plugins/export_odt/translations/: novelist_export_odt_de.ts  novelist_export_odt_en.ts
plugins/find/: CMakeLists.txt
plugins/find/include/novelist/: FindPlugin.h  FindPlugin.json  FindWidget.h  InternalTreeView.h
plugins/find/src/novelist/: FindPlugin.cpp  FindWidget.cpp  FindWidget.ui
plugins/find/translations/: novelist_find_de.ts  novelist_find_en.ts
plugins/languagetool/: CMakeLists.txt
plugins/languagetool/include/novelist/: LanguageToolInspector.h  LanguageToolPlugin.h  LanguageToolPlugin.json  SettingsPage_LanguageTool.h
plugins/languagetool/src/novelist/: LanguageToolInspector.cpp  LanguageToolPlugin.cpp  SettingsPage_LanguageTool.cpp  SettingsPage_LanguageTool.ui
plugins/languagetool/translations/: novelist_languagetool_de.ts  novelist_languagetool_en.ts
plugins/main/: CMakeLists.txt
plugins/main/translations/: novelist_main_de.ts  novelist_main_en.ts
plugins/stats/: CMakeLists.txt
plugins/stats/test/: CMakeLists.txt  TextAnalyzerTest.cpp  main.cpp
plugins/stats/translations/: novelist_stats_de.ts  novelist_stats_en.ts
slim/: CMakeLists.txt
slim/src/novelist/: main.cpp
(+78 files in other folders)
